<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Nanodegree App Launcher</string>
    <string name="button1_text">SPOTIFY STREAMER</string>
    <string name="button2_text">SCORES APP</string>
    <string name="button3_text">LIBRARY APP</string>
    <string name="button4_text">BUILD IT BIGGER</string>
    <string name="button5_text">XYZ READER</string>
    <string name="button6_text">CAPSTONE: MY OWN APP</string>
</resources>
