<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26dp"
        android:id="@+id/textView"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:textIsSelectable="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button1_text"
            android:id="@+id/button1"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/udacity_orange" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button2_text"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/udacity_orange" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button3_text"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/udacity_orange" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button4_text"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/udacity_orange" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button5_text"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/udacity_orange" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button6_text"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@android:color/holo_red_dark" />
    </LinearLayout>

</RelativeLayout>
